--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node app.js ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "NODE_ENV=production node ./bin/www",
+    "dev": "node ./bin/www"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
