--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "passport": "^0.3.2",
     "path": "^0.12.7",
     "pg": "^7.1.2",
+    "pg-hstore": "^2.3.2",
     "pg-tools": "^0.1.0",
     "pug": "^2.0.0-rc.1",
-    "sequelize": "~3.30.4",
+    "sequelize": "^3.30.4",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
