--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./server/app.js",
+    "start": "NODE_ENV=production node app.js",
     "dev": "node ./bin/www"
   },
   "dependencies": {
