--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "jade": "^1.11.0",
     "mongodb": "^2.2.27",
@@ -20,8 +21,8 @@
     "mysql": "^2.14.1",
     "passport": "^0.3.2",
     "path": "^0.12.7",
-    "pg-tools": "^0.1.0",
     "pg": "^6.4.1",
+    "pg-tools": "^0.1.0",
     "pug": "^2.0.0-rc.1",
     "sequelize": "~3.30.4",
     "serve-favicon": "~2.3.2"
