--- a/server/package.json
+++ b/server/package.json
@@ -8,23 +8,23 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.16.0",
+    "body-parser": "^1.16.1",
     "connect-modrewrite": "^0.10.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.0",
     "express": "^4.14.1",
     "jade": "^1.11.0",
     "mongodb": "^2.2.27",
-    "morgan": "~1.7.0",
+    "morgan": "^1.7.0",
     "mysql": "^2.14.1",
     "passport": "^0.3.2",
     "path": "^0.12.7",
-    "pg": "^7.0.0",
+    "pg": "7.0.0",
     "pg-hstore": "^2.3.2",
     "pgtools": "0.0.2",
     "pug": "^2.0.0-rc.1",
-    "sequelize": "^4.5.0",
+    "sequelize": "4.5.0",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
