--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "mysql": "^2.14.1",
     "passport": "^0.3.2",
     "path": "^0.12.7",
-    "pg": "^7.1.2",
+    "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
-    "pg-tools": "^0.1.0",
+    "pgtools": "0.0.2",
     "pug": "^2.0.0-rc.1",
-    "sequelize": "^3.30.4",
+    "sequelize": "^3.5.1",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
