--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,7 @@
     "pg-hstore": "^2.3.2",
     "pgtools": "0.0.2",
     "pug": "^2.0.0-rc.1",
-    "sequelize": "4.5.0",
+    "sequelize": "^3.5.1",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
