--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.1",
+    "cls-bluebird": "^2.0.1",
     "connect-modrewrite": "^0.10.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
