--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.0",
+    "dottie": "^2.0.0",
     "express": "^4.14.1",
     "jade": "^1.11.0",
     "mongodb": "^2.2.27",
@@ -26,7 +27,8 @@
     "pgtools": "0.0.2",
     "pug": "^2.0.0-rc.1",
     "sequelize": "^4.8.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "wkx": "^0.4.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
