--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dottie": "^2.0.0",
     "express": "^4.14.1",
     "jade": "^1.11.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.27",
     "morgan": "~1.7.0",
     "mysql": "^2.14.1",
